--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
+POSTGRES_HOST="postgres"
 POSTGRES_DB="social"
 POSTGRES_USER="social"
 POSTGRES_PASSWORD="1234"
 
-DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?schema=public"
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:5432/${POSTGRES_DB}?schema=public"
